syntax = "proto3";

package kg.musabaev.filmpoisk;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "kg.musabaev.filmpoisk.grpc.commmons";
option java_outer_classname = "FilmServiceProto";

service FilmService {
  rpc FindAllFilms(google.protobuf.Empty) returns (stream FilmListViewResponse) {}
  rpc FindAllByTitle(FilmByTitleRequest) returns (stream FilmListViewResponse) {}
  rpc FindById(FilmByIdRequest) returns (FilmItemViewResponse) {}
}

message FilmListViewResponse {
  int32 id = 1;
  string title = 2;
}

message FilmByIdRequest {
  int32 id = 1;
}

message FilmByTitleRequest {
  string title = 2;
}

message FilmItemViewResponse {
  int32 id = 1;
  string title = 2;
  int32 releaseDate = 3;
}
